rebot(CI): Update settings

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,12 +1,12 @@
 {
-  "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
+  "favicon": "https://cdn.jsdelivr.net/gh/7476474/liusi-zhuye@image/nav-1710998844365-bf7e00ecab02171f8461ee8cf439c73db9797748.png",
   "homeUrl": "https://nav3.cn",
   "language": "zh-CN",
   "loading": "loading2",
   "showGithub": true,
-  "title": "发现导航 - 精选实用导航网站",
-  "description": "发现导航 - 精选实用导航网站",
-  "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,node.js",
+  "title": "Liusi导航 全站点综合",
+  "description": "Liusi站点快捷访问",
+  "keywords": "导航,Liusi,社区",
   "theme": "Side",
   "appTheme": "Side",
   "headerContent": "",
