rebot(CI): Update settings

--- a/data/settings.json
+++ b/data/settings.json
@@ -4,7 +4,7 @@
   "language": "zh-CN",
   "loading": "loading2",
   "showGithub": true,
-  "title": "Liusi导航 全站点综合",
+  "title": "hen导航 全站点综合",
   "description": "Liusi站点快捷访问",
   "keywords": "导航,Liusi,社区",
   "theme": "Side",
